--- a/packages/ifos/package.json
+++ b/packages/ifos/package.json
@@ -15,6 +15,7 @@
     "wagmi": "^1.3.4"
   },
   "dependencies": {
+    "@layerzerolabs/scan-client": "^0.0.6",
     "bignumber.js": "^9.0.0"
   },
   "devDependencies": {
