bamboo.yml edited online with Bitbucket
updated bamboo specs

--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -109,7 +109,7 @@ release-naming:
   auto-increment: true
   auto-increment-variables: []
 environments:
-  - Production server
+  - Production Server
 Production Server:
   triggers:
     - build-success
