bamboo.yml edited online with Bitbucket
updated bamboo specs

--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -145,7 +145,7 @@ deployment-permissions:
       - view
       - edit
 environment-permissions:
-  - Development Server:
+  - Production Server:
       - users:
           - nick
         permissions:
