--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -2,3 +2,4 @@ NEXT_PUBLIC_GTAG = "GTM-TLF66T4"
 
 NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://hub.snapshot.org"
 
+API_URL=https://proxy.52.73.230.218.nip.io
